logs/mobility/build.make.116.log.stderr
In file included from /home/steven/rover_workspace/src/mobility/src/SearchController.cpp:1:0:
/home/steven/rover_workspace/src/mobility/src/SearchController.h:19:14: error: ‘string’ does not name a type
 const static string stateNames[] = {"SETTING_INITIAL_HEADING", "WAITING_FOR_MOMENTUM", "MOVING_TO_GOAL","REACHED_GOAL","REACHED_GOAL_PAUSE"};
              ^
make[2]: *** [CMakeFiles/mobility.dir/src/SearchController.cpp.o] Error 1
make[2]: *** Waiting for unfinished jobs....
In file included from /home/steven/rover_workspace/src/mobility/src/mobility.cpp:24:0:
/home/steven/rover_workspace/src/mobility/src/SearchController.h:19:14: error: ‘string’ does not name a type
 const static string stateNames[] = {"SETTING_INITIAL_HEADING", "WAITING_FOR_MOMENTUM", "MOVING_TO_GOAL","REACHED_GOAL","REACHED_GOAL_PAUSE"};
              ^
make[2]: *** [CMakeFiles/mobility.dir/src/mobility.cpp.o] Error 1
make[1]: *** [CMakeFiles/mobility.dir/all] Error 2
make: *** [all] Error 2
